<resources>
    <!-- Titles -->
    <string name="app_name">Liftin</string>
    <string name="home_title">Home</string>
    <string name="auth_title">Login</string>
    <string name="add_workout_title">Add Workout</string>
    <string name="workout_title">Workout</string>
    <string name="add_exercise_title">Add Exercise</string>
    <string name="exercise_title">Exercise</string>
    <!-- Common -->
    <string name="unknown_error">"An unknown error has happened.\nContact the developer".</string>
    <string name="timeout">There was a problem connecting to our servers</string>
    <string name="unavailable">"Our servers are currently unavailable.\nTry again later."</string>
    <string name="data_lost">"There was a problem with your connection.\nTry again."</string>
    <string name="unauthorised">"You are not authorised to do this.\nContact the developer"</string>
    <string name="wrong_model">"Something went really bad.\nContact the developer"</string>
    <string name="invalid_query">Something went wrong.\nContact the developer.</string>
    <string name="name">Name:</string>
    <string name="name_hint">1</string>
    <string name="delete_icon">Delete Icon</string>
    <!-- AuthFragment -->
    <string name="empty_credentials">The email and password fields can\'t be empty</string>
    <string name="bad_email">The email is invalid</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="weak_password">The password must be at least 6 characters long</string>
    <string name="invalid_email">This email is not registered to any account</string>
    <string name="email_taken">The email is already in use</string>
    <string name="user_retrieval_fail">"There was a problem retrieving authentication information.\nContact the developer"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <!-- AddExerciseFragment -->
    <string name="permission_needed">You need to give permission for access to the gallery</string>
    <string name="exercise_empty_fields">The name and observations fields can\'t be empty</string>
    <string name="image_empty_field">You have to choose an image</string>
    <string name="upload_limit_exceeded">You have exceeded your image upload quota</string>
    <string name="exercise_already_exists">"An exercise with this name already exists"</string>
    <string name="observations">Observations:</string>
    <string name="observations_hint">Ex: "Pistol Squat: Don't get too low"</string>
    <string name="exercise_image_description">Exercise</string>
    <string name="add_image">Add Image</string>
    <string name="save_exercise">Save Exercise</string>
    <!-- AddWorkoutFragment -->
    <string name="workout_creation_failure">"There was a problem creating your workout"</string>
    <string name="workout_already_exists">A workout with this name and date already exists</string>
    <string name="workout_empty_fields">The name and description fields can\'t be empty</string>
    <string name="description">Description:</string>
    <string name="description_hint">Ex: "Biceps and Triceps"</string>
    <string name="save_workout">Save Workout</string>
    <!-- ExerciseFragment -->
    <string name="download_limit_exceeded">You have exceeded your image download quota</string>
    <string name="exercise_not_found">There was a problem trying to find this exercise</string>
    <string name="image_not_found">There was a problem retrieving the exercise image</string>
    <string name="delete_exercise">Delete exercise</string>
    <!-- HomeFragment -->
    <string name="workouts_not_found">There was a problem retrieving the workout list</string>
    <string name="add_workout">Add Workout</string>
    <string name="log_out">Log Out</string>
    <!-- WorkoutFragment -->
    <string name="exercises_not_found">There was a problem retrieving the exercise list</string>
    <string name="image_deletion_fail">There was a problem finding the exercise image to delete</string>
    <string name="add_exercise">Add Exercise</string>
</resources>