<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="xyz.joaophp.liftin.ui.fragments.AuthFragment"
        android:label="@string/auth_title">
        <action
            android:id="@+id/action_authFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="xyz.joaophp.liftin.ui.fragments.HomeFragment"
        android:label="@string/home_title">
        <action
            android:id="@+id/action_homeFragment_to_authFragment"
            app:destination="@id/authFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_homeFragment_to_addWorkoutFragment"
            app:destination="@id/addWorkoutFragment" />
        <action
            android:id="@+id/action_homeFragment_to_workoutFragment"
            app:destination="@id/workoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/addWorkoutFragment"
        android:name="xyz.joaophp.liftin.ui.fragments.AddWorkoutFragment"
        android:label="@string/add_workout_title" />
    <fragment
        android:id="@+id/workoutFragment"
        android:name="xyz.joaophp.liftin.ui.fragments.WorkoutFragment"
        android:label="@string/workout_title">
        <action
            android:id="@+id/action_workoutFragment_to_addExerciseFragment"
            app:destination="@id/addExerciseFragment" />
        <action
            android:id="@+id/action_workoutFragment_to_exerciseFragment"
            app:destination="@id/exerciseFragment" />
    </fragment>
    <fragment
        android:id="@+id/addExerciseFragment"
        android:name="xyz.joaophp.liftin.ui.fragments.AddExerciseFragment"
        android:label="@string/add_exercise_title" />
    <fragment
        android:id="@+id/exerciseFragment"
        android:name="xyz.joaophp.liftin.ui.fragments.ExerciseFragment"
        android:label="@string/exercise_title" />
</navigation>